# inbox-cli

./: .envrc.example  .gitignore  README.md  bugs.md  config.toml.example  pyproject.toml
.cursor/rules/: concise-replies.mdc  git-commit.mdc  test-data.mdc
src/email_inbox/: __init__.py  accounts.py  browser.py  cli.py  config.py  editor.py  formatting.py  gog.py  interactive.py  list_inbox.py  mark_read.py  obsidian.py  paths.py  pick.py  pick_flow.py  reply.py  routing.py  send.py  session.py  terminal.py  textual_picker.py  theme.py
tests/: sample_data.py  test_accounts.py  test_browser.py  test_cli.py  test_cli_tui.py  test_config.py  test_editor.py  test_formatting.py  test_gog_cache.py  test_interactive.py  test_list_inbox.py  test_mark_read.py  test_obsidian.py  test_paths.py  test_pick.py  test_reply.py  test_routing.py  test_send.py  test_terminal.py  test_textual_picker.py  test_theme.py
tests/fixtures/: accounts.md
