[project]
name = "inbox-cli"
version = "0.1.0"
description = "Gmail unread inbox TUI via gog, with Obsidian vault reply drafts"
readme = "README.md"
authors = [{ name = "Pete Graham", email = "petegraham1@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "textual>=8.2.7",
]

[project.scripts]
inbox = "email_inbox.cli:main"
email-inbox = "email_inbox.cli:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "email_inbox"

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-cov>=7.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires gog auth and network"]
addopts = "-ra"

[tool.coverage.run]
source = ["email_inbox"]
branch = true

[tool.coverage.report]
show_missing = true
